# teach-me-mailer

./: .editorconfig  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  ATOMIC_RATE_LIMITING.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAILER_SERVICE.md  Makefile  OBSERVABILITY.md  QUICKSTART.md  README.md  SECURITY.md  SEND_ENDPOINT.md  alembic.ini  codecov.yml  create_api_key.py  docker-compose.yml  fix_integration_tests.py  mail-gateway.postman_collection.json  pyproject.toml  pytest.ini  requirements.txt  sentry_test_server.py  test.py.BAK
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly.yml  pr-coverage.yml
app/: __init__.py  main.py
app/api/v1/: __init__.py  admin.py  health.py  mail.py  routes.py  usage.py
app/core/: config.py  deps.py
app/db/: base.py  session.py
app/models/: __init__.py  api_key.py  daily_usage.py  send_log.py
app/schemas/: __init__.py  mail.py
app/scripts/: __init__.py  create_api_key.py  test_mail.py
app/services/: atomic_rate_limit.py  auth.py  domain_validation.py  email_queue.py  mailer.py  rate_limit.py  usage_tracking.py
docker/: entrypoint.sh
docs/: BRANCH_MANAGEMENT.md  CI_CD_SETUP.md  PHASE_1_COMPLETE.md  TESTING_PLAN.md  architecture.md  demo.md  openapi.json  postman_collection.json
examples/client_service/: .env.example  README.md  app.py  postman_collection.json  requirements.txt
migrations/: 001_initial.py  env.py
migrations/versions/: 2025_11_09_1215-0a1b2c3d_create_mailer_schema.py  2025_11_09_1221-5d8abdae0e1d_create_tables_for_models.py  2025_11_09_1610-3a6d49148851_.py
monitoring/: prometheus.yml
scripts/: check_create_devdb.py  demo.sh  demo_seed.py  generate_openapi.py  seed.py  setup_test_db.py
static/: styles.css
templates/: admin_create_api_key.html  admin_list.html  base.html  index.html
tests/: README.md  __init__.py  conftest.py  test_auth.py  test_main.py  test_rate_limit.py  test_security.py  test_send.py  test_smoke.py
tests/integration/: test_atomic_rate_limit_integration.py  test_auth_flow.py  test_database.py  test_email_flow.py  test_rate_limiting.py  test_usage_tracking_integration.py
tests/integration/api/: test_admin_endpoints.py  test_health_endpoint.py  test_mail_endpoint.py  test_usage_endpoint.py
tests/unit/core/: test_config.py
tests/unit/models/: test_api_key.py  test_daily_usage.py  test_send_log.py
tests/unit/schemas/: __init__.py  test_mail.py
tests/unit/services/: test_atomic_rate_limit.py  test_auth.py  test_domain_validation.py  test_mailer.py  test_rate_limit.py  test_usage_tracking.py
