[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "teach-me-mailer"
version = "0.1.0"
description = "Production-ready async FastAPI email service with rate limiting and observability"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.104.1",
    "sqlalchemy[asyncio]>=2.0.23",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "aiosmtplib>=3.0.1",
    "pydantic[email]>=2.1.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "structlog>=23.2.0",
    "bcrypt>=4.1.0",
    "sentry-sdk[fastapi]>=1.32.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "greenlet>=3.2.4",
    "psycopg2-binary>=2.9.11",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "safety>=2.3.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "faker>=20.1.0",
    "aiosqlite>=0.19.0",
    "pytest-xdist>=3.5.0",        # Parallel test execution
    "pytest-timeout>=2.2.0",      # Test timeouts
    "pytest-env>=1.1.0",          # Environment variable management
    "freezegun>=1.4.0",           # Time mocking
    "coverage[toml]>=7.3.0",      # Extended code coverage
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 119
skip_glob = ["migrations/*"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=app --cov-report=html --cov-report=xml --cov-report=term-missing"
minversion = "7.0"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "app/api/v1/admin.py",
    "app/api/v1/mail.py",
    "app/services/email_queue.py",
    "app/services/usage_tracking.py",
    "app/services/atomic_rate_limit.py",
    "app/api/v1/usage.py",
    "app/core/deps.py",
    "app/main.py",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 2
